# graphrag-api

./: .env.example  .flake8  .gitignore  .gitleaksignore  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  ANALYSIS_REPORT.md  ANALYSIS_REPORT_V2.md  ANALYSIS_REPORT_V3.md  API_DOCUMENTATION.md  AUTH_IMPLEMENTATION_PLAN.md  CLAUDE.md  CODE_QUALITY_REPORT_2025-09-04_V8_PERFECT.md  COMPLETION_PLAN.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_REQUIREMENTS.md  Dockerfile  Dockerfile.cloudrun  Dockerfile.production  FINAL_PRODUCTION_STATUS.md  GEMINI.md  GRAPHQL_REFACTORING_REPORT.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PRODUCTION_READY_STATUS.md  PROJECT-PLAN.md  PROJECT_PLAN.md  PROJECT_PLAN_REVISED.md  QA_REPORT_AUTH.md  README.md  REFACTORING_REPORT_AUTH.md  REFACTORING_REPORT_COMPLETE.md  RELEASE_TEMPLATE.md  RUNBOOK.md  SECURITY.md  SECURITY_EXCEPTIONS.md  TODO-FIX-V2.md  TODO-FIX-V3.md  (+16 more)
.augment/rules/: code_quality.md  git_rules.md
.claude/: settings.local.json
.github/: SECURITY_POLICIES.md  pull_request_template.md
.github/workflows/: ci-cd-full.yml.disabled  ci-cd.yml  release.yml  security-best-practices.yml  security.yml
alembic/: env.py
alembic/versions/: eaf1772e4d7a_initial_database_schema.py
docs/: AUTHENTICATION_QUICKSTART.md  CONFIGURATION.md  DEPLOYMENT_GUIDE.md  MIGRATION_GUIDE.md  PHASE10_SUMMARY.md  PHASE11_SUMMARY.md  SECURITY_WORKFLOW.md  api_feature_parity_matrix.md  authentication-improvement-plan.md  authentication_api.md  authentication_setup_guide.md  authentication_troubleshooting.md  phase10_production_deployment.md
docs-platform/: .env.example  Dockerfile  Dockerfile.dev  docker-compose.yml  docsearch-config.json  docusaurus.config.js  nginx.conf  package.json  sidebars-api.js  sidebars.js
docs-platform/config/: .gitkeep
docs-platform/scripts/: generate-api-docs.js
docs-platform/source/: .gitkeep
docs/adr/: 001-sqlite-over-postgresql.md  002-memory-cache-over-redis.md  003-serverless-over-kubernetes.md  004-dual-llm-provider-strategy.md  005-simplified-architecture.md  README.md
docs/api/: authentication-examples.md  error-codes.md  graphql-schema.md  openapi.yaml
docs/developer-experience/: quickstart-guide.md
docs/llm-providers/: google-cloud-integration.md  ollama-integration.md  provider-comparison.md
docs/reports/: GRAPHQL_REFACTORING_REPORT.md  MIDDLEWARE_REFACTORING_REPORT.md  PERFORMANCE_REFACTORING_REPORT.md  QA_REPORT_AUTH.md  REFACTORING_REPORT_AUTH.md  REFACTORING_REPORT_COMPLETE.md
docs/testing/: postman-testing-guide.md
docs/use-cases/: knowledge-base-construction.md
indexing_jobs/: jobs.json
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml  service.yaml
postman/: GraphRAG-API-Collection.json
postman/environments/: Local-Development.postman_environment.json  Production.postman_environment.json
scripts/: create-release.ps1  deploy-cloudrun.sh  docker-entrypoint.sh  healthcheck.sh  init.sql  remove_emojis.py  run_api_tests.py  run_auth_migration.py  run_ci_checks.ps1  run_ci_checks.py  run_security_scan.py  security-check.ps1  test_security_workflow.py
src/: test_hooks.py
src/graphrag_api_service/: config.py  dependencies.py  deps.py  exceptions.py  graphrag_integration.py  logging_config.py  main.py
tests/: README.md  TEST_REORGANIZATION_PLAN.md  conftest.py  test_advanced_query_engine.py  test_api_integration.py  test_api_integration_enhanced.py  test_api_parity.py  test_auth_integration.py  test_auth_system.py  test_config.py  test_deployment_config.py  test_fixes.py  test_gemini_provider.py  test_graph_analytics.py  test_graph_operations.py  test_graphql.py  test_graphql_integration.py  test_indexing.py  test_indexing_api.py  test_load_testing.py  test_logging_config.py  test_main.py  test_ollama_provider.py  test_performance_optimization.py  test_phase11_graphql_enhancement.py  test_phase11_graphql_enhancement.py.disabled  test_postman_runner.py  test_provider.py  test_providers_base.py  test_security_middleware.py  test_system_operations.py  test_workspace.py
tests/fixtures/: __init__.py  clients.py  data.py  mocks.py
tests/integration/: test_admin_api.py  test_api_endpoints.py  test_auth_integration.py  test_graphql_endpoints.py  test_workspace_cleanup_endpoints.py
tests/performance/: test_optimization.py
tests/postman/: environment.json  graphql_collection.json  graphrag_api_collection.json
tests/security/: test_auth_security.py  test_path_validation.py
tests/unit/: test_config.py  test_exceptions.py  test_graph.py  test_indexing.py  test_logging.py  test_middleware.py  test_providers.py  test_system.py  test_workspace.py  test_workspace_lifecycle.py
workspaces/: workspaces.json
workspaces/TestWorkspace123-82387794/: settings.yaml
workspaces/TestWorkspace123-8db266a0/: settings.yaml
workspaces/TestWorkspace123_2/: settings.yaml
workspaces/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-39e0d98c/: settings.yaml
workspaces/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-5856c3a4/: settings.yaml
workspaces/batch-01e86d49/: settings.yaml
workspaces/batch-694c96e6/: settings.yaml
workspaces/batch-9117a073/: settings.yaml
workspaces/batch-98599ab2/: settings.yaml
workspaces/batch-a3f81910/: settings.yaml
workspaces/batch-a5b0f2ee/: settings.yaml
workspaces/batch-a88d0689/: settings.yaml
workspaces/batch-afb38814/: settings.yaml
workspaces/batch-bdf901b4/: settings.yaml
workspaces/batch-c9f4a509/: settings.yaml
workspaces/batch-e4917d9f/: settings.yaml
workspaces/batch-f725d1af/: settings.yaml
workspaces/concurrent-0203862c/: settings.yaml
workspaces/concurrent-0338a8f6/: settings.yaml
workspaces/concurrent-0428cabb/: settings.yaml
workspaces/concurrent-0dbacf5e/: settings.yaml
workspaces/concurrent-199ea660/: settings.yaml
workspaces/concurrent-1ec063ff/: settings.yaml
workspaces/concurrent-212e9706/: settings.yaml
workspaces/concurrent-2178a05e/: settings.yaml
workspaces/concurrent-339be8df/: settings.yaml
workspaces/concurrent-41d98902/: settings.yaml
(+284 files in other folders)
